--- a/.github/workflows/main_mg-bitbucket-node-next-chunk.yml
+++ b/.github/workflows/main_mg-bitbucket-node-next-chunk.yml
@@ -29,7 +29,10 @@ jobs:
           npm run build 
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "*.git*" "node_modules/*"
+        run: zip release.zip ./* -r
+
+      - name: Zip build output including .next
+        run: zip -r release.zip .next public package.json package-lock.json
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
