--- a/.github/workflows/main_mg-bitbucket-node-next-chunk.yml
+++ b/.github/workflows/main_mg-bitbucket-node-next-chunk.yml
@@ -28,11 +28,11 @@ jobs:
           npm install
           npm run build 
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      #- name: Zip artifact for deployment
+        #run: zip release.zip ./* -r
 
       - name: Zip build output including .next
-        run: zip -r release.zip .next public package.json package-lock.json
+        run: zip -r release.zip .next public package.json package-lock.json ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
