--- a/.github/workflows/main_mg-bitbucket-node-next-chunk.yml
+++ b/.github/workflows/main_mg-bitbucket-node-next-chunk.yml
@@ -32,7 +32,7 @@ jobs:
         #run: zip release.zip ./* -r
 
       - name: Zip build output including .next
-        run: zip -r release.zip .next public package.json package-lock.json ./*
+        run: zip -r release.zip . -x "*.git*" "*.github*" "*.DS_Store"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
