--- a/.github/workflows/main_mg-bitbucket-node-next-chunk.yml
+++ b/.github/workflows/main_mg-bitbucket-node-next-chunk.yml
@@ -28,8 +28,14 @@ jobs:
           npm install
           npm run build
 
+      - name: Prepare production deployment bundle
+        run: |
+          mkdir deployment
+          cp -r .next public package.json package-lock.json deployment/
+          cp -r server.js deployment/ || true  # If using custom server
+
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: cd deployment && zip -r ../release.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
