--- a/.github/workflows/main_mg-bitbucket-node-next-chunk.yml
+++ b/.github/workflows/main_mg-bitbucket-node-next-chunk.yml
@@ -26,7 +26,10 @@ jobs:
       - name: npm install and build
         run: |
           npm install
+          npm install -g next\
           npm run build
+          npm run
+          next build
 
       - name: Prepare production deployment bundle
         run: |
