--- a/.github/workflows/main_mg-bitbucket-node-next-chunk.yml
+++ b/.github/workflows/main_mg-bitbucket-node-next-chunk.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           npm install
           npm run build
-          npm run
+          #npm run
           next build
 
       - name: Prepare production deployment bundle
